[package]
name = "axum-governor"
version = "1.0.2"
edition = "2024"
description = "Rate limiting middleware for Axum, powered by lazy-limit and unrelated to governor etc."
license = "MIT"
repository = "https://github.com/canmi21/axum-governor"
readme = "README.md"
keywords = ["axum", "middleware", "ratelimit", "limit", "lazy-limit"]
categories = ["network-programming", "web-programming"]

[lib]
path = "src/lib.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"
required-features = ["full"]

[features]
default = []
full = []

[dependencies]
axum = "0.8"
futures-util = "0.3"
lazy-limit = "1"
real = { version = "0.1", features = ["axum"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
http = "1"
tracing = "0.1"

[patch.crates-io]
lazy-limit = { git = "https://github.com/jb-alvarado/lazy-limit.git" }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
